moving users controller to admin namespace

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,8 @@
       </div>
     </div>
 
+    <%=render :partial => "shared/flash_messages", :locals => {:flash => flash}%>
+
     <div class="container">
       <div class="content">
         <div class="row">
