--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,25 +22,31 @@
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-          <div class="container">
+        <div class="container">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="#">SacPlatform</a>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Users", "/users"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Logout", "/sessions/destroy"  %></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <% if current_user %>
+            <div class="container nav-collapse">
+              <ul class="nav">
+                <li><%= link_to "Users", admin_users_path  %></li>
+                <li><%= link_to "Link2", "/path2"  %></li>
+                <li><a href="#" onclick="$('#current_user').find('form:first').submit();"><%= t('menu.logout') %></a>
+                  <div style="display: none;">
+                    <%= button_to t('menu.logout'), destroy_user_session_path, :method=>:delete, :class=>:destroy, :id=> "button_log_out", :confirm=> t('text.are_you_sure') %>
+                  </div>
+                </li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          <% end %>           
         </div>
       </div>
     </div>
 
-    <%=render :partial => "shared/flash_messages", :locals => {:flash => flash}%>
+    <%= render :partial => "shared/flash_messages", :locals => {:flash => flash}%>
 
     <div class="container">
       <div class="content">
@@ -49,15 +55,7 @@
               <%= yield %>
             </div>
             <div class="span3">
-              <div class="well sidebar-nav">
-                <h3>Sidebar</h3>
-                <ul class="nav nav-list">
-                  <li class="nav-header">Sidebar</li>
-                  <li><%= link_to "Link1", "/path1"  %></li>
-                  <li><%= link_to "Link2", "/path2"  %></li>
-                  <li><%= link_to "Link3", "/path3"  %></li>
-                </ul>
-              </div><!--/.well -->
+              <%= render :partial => "shared/sidebar"%>
             </div><!--/span-->
         </div><!--/row-->
       </div><!--/content-->
