--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,7 +8,8 @@
       <th><%= model_class.human_attribute_name(:username) %></th>
       <th><%= model_class.human_attribute_name(:locked_at) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <!-- <th><%=t '.actions', :default => t("helpers.actions") %></th> -->
+      <th><%= model_class.human_attribute_name(:actions) %></th>
     </tr>
   </thead>
   <tbody>
@@ -20,13 +21,15 @@
         <td><%= user.locked_at %></td>
         <td><%=l user.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_user_path(user), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      admin_user_path(user),
-                      :method => :delete,
+          <%= link_to t(:show), edit_admin_user_path(user), :class => 'btn btn-mini' %>
+          <%= link_to t(:destroy), admin_user_path(user), :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
+          <% if user.locked_at.nil? %>
+            <%= link_to t(:lock), admin_user_lock_path(user.id), :class => 'btn btn-mini btn-danger' %>
+          <% else %>
+            <%= link_to t(:unlock), admin_user_unlock_path(user.id), :class => 'btn btn-mini btn-pria' %>     
+          <% end %>
         </td>
       </tr>
     <% end %>
@@ -35,6 +38,6 @@
 
 <%= will_paginate @users %>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t(:new),
             new_admin_user_path,
             :class => 'btn btn-primary' %>
