--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,7 +8,6 @@
       <th><%= model_class.human_attribute_name(:username) %></th>
       <th><%= model_class.human_attribute_name(:locked_at) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <!-- <th><%=t '.actions', :default => t("helpers.actions") %></th> -->
       <th><%= model_class.human_attribute_name(:actions) %></th>
     </tr>
   </thead>
@@ -18,8 +17,8 @@
         <td><%= link_to user.id, admin_user_path(user) %></td>
         <td><%= user.email %></td>
         <td><%= user.username %></td>
-        <td><%= user.locked_at %></td>
-        <td><%=l user.created_at %></td>
+        <td><%= I18n.l user.locked_at, :format => :long if !user.locked_at.nil? %></td>
+        <td><%= I18n.l user.created_at, :format => :long %></td>
         <td>
           <%= link_to t(:show), edit_admin_user_path(user), :class => 'btn btn-mini' %>
           <%= link_to t(:destroy), admin_user_path(user), :method => :delete,
@@ -28,7 +27,7 @@
           <% if user.locked_at.nil? %>
             <%= link_to t(:lock), admin_user_lock_path(user.id), :class => 'btn btn-mini btn-danger' %>
           <% else %>
-            <%= link_to t(:unlock), admin_user_unlock_path(user.id), :class => 'btn btn-mini btn-pria' %>     
+            <%= link_to t(:unlock), admin_user_unlock_path(user.id), :class => 'btn btn-mini btn-primary' %>     
           <% end %>
         </td>
       </tr>
