setting the bootstrap layout . refs #18333

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
             <div class="container nav-collapse">
               <ul class="nav">
                 <li><%= link_to t('menu.users'), admin_users_path  %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
+                <li><%= link_to t('menu.partners'), partners_path  %></li>
                 <li><%= link_to t('menu.logout'), destroy_user_session_path, :method => :delete  %></li>
               </ul>
             </div><!--/.nav-collapse -->
