--- a/app/views/partners/edit.html.erb
+++ b/app/views/partners/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing partner</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @partner %> |
-<%= link_to 'Back', partners_path %>
+<%- model_class = @partner.class -%>
+<h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                 :default => "Edit #{model_class.model_name.human}") %></h1>
+<%= render :partial => 'form' %>
