--- a/app/views/admin/partners/show.html.erb
+++ b/app/views/admin/partners/show.html.erb
@@ -27,11 +27,11 @@ TODO: show domains
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              partners_path, :class => 'btn'  %>
+              admin_partners_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_partner_path(@partner), :class => 'btn' %>
+              admin_edit_partner_path(@partner), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              partner_path(@partner),
+              admin_partner_path(@partner),
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
