--- a/app/views/admin/partners/show.html.erb
+++ b/app/views/admin/partners/show.html.erb
@@ -29,7 +29,7 @@ TODO: show domains
   <%= link_to t('.back', :default => t("helpers.links.back")),
               admin_partners_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              admin_edit_partner_path(@partner), :class => 'btn' %>
+              edit_admin_partner_path(@partner), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               admin_partner_path(@partner),
               :method => 'delete',
