--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -20,7 +20,8 @@
         <td><%= I18n.l user.locked_at, :format => :long if !user.locked_at.nil? %></td>
         <td><%= I18n.l user.created_at, :format => :long %></td>
         <td>
-          <%= link_to t(:show), edit_admin_user_path(user), :class => 'btn btn-mini' %>
+          <%= link_to t(:edit), edit_admin_user_path(user), :class => 'btn btn-mini' %>
+          <%= link_to t(:show), admin_user_path(user), :class => 'btn btn-mini' %>
           <%= link_to t(:destroy), admin_user_path(user), :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
