--- a/app/views/admin/partners/index.html.erb
+++ b/app/views/admin/partners/index.html.erb
@@ -24,6 +24,8 @@
         <td><%= partner.description %></td>
         <td><%=l partner.created_at %></td>
         <td>
+          <%= link_to t(:show), admin_partner_dashboard_path(partner.prefix), :class => 'btn btn-mini' %>
+
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_admin_partner_path(partner), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
