--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
+
           <a class="brand" href="<%= root_path %>">SacPlatform</a>
           <%= @current_partner.name unless @current_partner.nil? %>
+
           <% if current_user %>
             <div class="container nav-collapse">
               <ul class="nav">
                 <li><%= link_to t('menu.users'), admin_users_path  %></li>
                 <li><%= link_to t('menu.partners'), admin_partners_path  %></li>
                 <li><%= link_to t('menu.logout'), destroy_user_session_path, :method => :delete  %></li>
+                <li>TODO: search memebr</li>
               </ul>
             </div><!--/.nav-collapse -->
           <% end %>           
