--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,11 +2,11 @@
   <% if current_user %>
     Hello <%= current_user.email %> <br>
     <h3>Sidebar</h3>
-    <ul class="nav nav-list">
-      <li class="nav-header">Sidebar</li>
-      <li><%= link_to "Link1", "/path1"  %></li>
-      <li><%= link_to "Link2", "/path2"  %></li>
-      <li><%= link_to "Link3", "/path3"  %></li>
-    </ul>
+    <% if @current_partner %>
+      <ul class="nav nav-list">
+        <li class="nav-header">General</li>
+        <li><%= link_to "Domains", domains_path  %></li>
+      </ul>
+    <% end %>
   <% end %>
 </div><!--/.well -->
