--- a/app/views/domains/index.html.erb
+++ b/app/views/domains/index.html.erb
@@ -7,9 +7,7 @@
       <th><%= model_class.human_attribute_name(:url) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:data_rights) %></th>
-      <th><%= model_class.human_attribute_name(:partner_id) %></th>
       <th><%= model_class.human_attribute_name(:hosted) %></th>
-      <th><%= model_class.human_attribute_name(:deleted_at) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -17,19 +15,17 @@
   <tbody>
     <% @domains.each do |domain| %>
       <tr>
-        <td><%= link_to domain.id, domain_path(domain) %></td>
+        <td><%= link_to domain.id, domain_path(:id => domain.id) %></td>
         <td><%= domain.url %></td>
         <td><%= domain.description %></td>
         <td><%= domain.data_rights %></td>
-        <td><%= domain.partner_id %></td>
         <td><%= domain.hosted %></td>
-        <td><%= domain.deleted_at %></td>
         <td><%=l domain.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_domain_path(domain), :class => 'btn btn-mini' %>
+                      edit_domain_path(:id => domain.id), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      domain_path(domain),
+                      domain_path(:id => domain.id),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
