--- a/app/views/admin/partners/index.html.erb
+++ b/app/views/admin/partners/index.html.erb
@@ -10,7 +10,7 @@
       <th><%= model_class.human_attribute_name(:website_url) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= model_class.human_attribute_name(:actions) %></th>
     </tr>
   </thead>
   <tbody>
@@ -26,9 +26,9 @@
         <td>
           <%= link_to t(:dashboard), admin_partner_dashboard_path(partner.prefix), :class => 'btn btn-mini' %>
 
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to t(:edit),
                       edit_admin_partner_path(partner), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to t(:destroy),
                       admin_partner_path(partner),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
@@ -39,6 +39,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t(:new),
             new_admin_partner_path,
             :class => 'btn btn-primary' %>
