--- a/app/views/admin/partners/dashboard.html.erb
+++ b/app/views/admin/partners/dashboard.html.erb
@@ -26,11 +26,11 @@ TODO: show domains
 
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
+  <%= link_to t(:back),
               admin_partners_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+  <%= link_to t(:edit),
               edit_admin_partner_path(@partner), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+  <%= link_to t(:destroy),
               admin_partner_path(@partner),
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
