Feature refs #18352 - added club model and controller, not tested / finished yet

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -6,6 +6,7 @@
       <ul class="nav nav-list">
         <li class="nav-header">General</li>
         <li><%= link_to "Domains", domains_path  %></li>
+        <li><%= link_to "Clubs", clubs_path  %></li>
       </ul>
     <% end %>
   <% end %>
