--- a/app/views/domains/_form.html.erb
+++ b/app/views/domains/_form.html.erb
@@ -1,4 +1,14 @@
 <%= form_for @domain, :html => { :class => 'form-horizontal' } do |f| %>
+ 
+  <% if params[:action] != 'edit' %>
+    <div class="control-group">
+      <%= f.label :partner, :class => 'control-label' %>
+      <div class="controls">
+        <%= generate_select_partners_id @domain, @partner %>   
+      </div>
+    </div>
+  <% end %>
+  
   <div class="control-group">
     <%= f.label :url, :class => 'control-label' %>
     <div class="controls">
@@ -23,10 +33,12 @@
       <%= f.check_box :hosted, :class => 'check_box' %>
     </div>
   </div>
+
+  <%=  %>
   
+
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                domains_path, :class => 'btn' %>
+    <%= link_to t(:cancel), domains_path, :class => 'btn' %>
   </div>
 <% end %>
