--- a/app/views/domains/index.html.erb
+++ b/app/views/domains/index.html.erb
@@ -22,9 +22,9 @@
         <td><%= domain.hosted %></td>
         <td><%=l domain.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to t(:edit),
                       edit_domain_path(:id => domain.id), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to t(:destroy),
                       domain_path(:id => domain.id),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
@@ -35,6 +35,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t(:new),
             new_domain_path,
             :class => 'btn btn-primary' %>
