--- a/app/views/domains/show.html.erb
+++ b/app/views/domains/show.html.erb
@@ -29,6 +29,10 @@
   <strong><%= model_class.human_attribute_name(:deleted_at) %>:</strong><br>
   <%= @domain.deleted_at %>
 </p>
+<p>
+  <strong><%= model_class.human_attribute_name(:club_id) %>:</strong><br>
+  <%= @domain.club_id %>
+</p>
 
 <div class="form-actions">
   <%= link_to t(:back),
