--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -1,4 +1,13 @@
 <%= form_for @club, :html => { :class => 'form-horizontal' } do |f| %>
+  <% if params[:action] != 'edit' %>
+    <div class="control-group">
+      <%= f.label :partner_id, :class => 'control-label' %>
+      <div class="controls">
+        <%= generate_select_partner_id f, @club, @partner %>
+      </div>
+    </div>
+  <% end %>
+
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
@@ -11,13 +20,6 @@
       <%= f.text_field :name, :class => 'text_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :partner_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= generate_select_partner_id f, @club, @partner %>
-    </div>
-  </div>
-
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
