--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -9,23 +9,23 @@
       <th><%= model_class.human_attribute_name(:partner_id) %></th>
       <th><%= model_class.human_attribute_name(:deleted_at) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= t(:actions) %></th>
     </tr>
   </thead>
   <tbody>
     <% @clubs.each do |club| %>
       <tr>
-        <td><%= link_to club.id, club_path(club) %></td>
+        <td><%= link_to club.id, club_path(:id => club.id) %></td>
         <td><%= club.description %></td>
         <td><%= club.name %></td>
         <td><%= club.partner_id %></td>
         <td><%= club.deleted_at %></td>
         <td><%=l club.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_club_path(club), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      club_path(club),
+          <%= link_to t(:edit),
+                      edit_club_path(:id => club.id), :class => 'btn btn-mini' %>
+          <%= link_to t(:destroy),
+                      club_path(:id => club.id),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
@@ -35,6 +35,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t(:new),
             new_club_path,
             :class => 'btn btn-primary' %>
