--- a/app/views/domains/index.html.erb
+++ b/app/views/domains/index.html.erb
@@ -9,7 +9,7 @@
       <th><%= model_class.human_attribute_name(:data_rights) %></th>
       <th><%= model_class.human_attribute_name(:hosted) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%= model_class.human_attribute_name(:action) %></th>
+      <th><%= t(:actions) %></th>
     </tr>
   </thead>
   <tbody>
