#18351 - Added list of domains in dashboards

--- a/app/views/admin/partners/dashboard.html.erb
+++ b/app/views/admin/partners/dashboard.html.erb
@@ -22,8 +22,26 @@
   <%= @partner.description %>
 </p>
 
-TODO: show domains
-
+<table class="table table-striped">
+  <thread>
+    <tr>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:data_rights) %></th>
+      <th><%= model_class.human_attribute_name(:hosted) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+    </tr> 
+  </thead>
+  <tbody>
+    <% @domains.each do |domain| %>
+    <tr>
+      <td> <%= domain.description %> </td>
+      <td> <%= domain.data_rights %> </td>
+      <td> <%= domain.hosted %> </td>
+      <td> <%=l domain.created_at %> </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <div class="form-actions">
   <%= link_to t(:back),
