--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -19,12 +19,12 @@
 </p>
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
+  <%= link_to t(:back),
               clubs_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_club_path(@club), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              club_path(@club),
+  <%= link_to t(:edit),
+              edit_club_path(:id => @club.id), :class => 'btn' %>
+  <%= link_to t(:destroy),
+              club_path(:id => @club.id),
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
