--- a/app/views/admin/partners/index.html.erb
+++ b/app/views/admin/partners/index.html.erb
@@ -10,7 +10,7 @@
       <th><%= model_class.human_attribute_name(:website_url) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%= model_class.human_attribute_name(:actions) %></th>
+      <th><%= t(:actions) %></th>
     </tr>
   </thead>
   <tbody>
