--- a/app/views/admin/partners/dashboard.html.erb
+++ b/app/views/admin/partners/dashboard.html.erb
@@ -25,7 +25,7 @@
 <table class="table table-striped">
   <thread>
     <tr>
-      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:url) %></th>
       <th><%= model_class.human_attribute_name(:data_rights) %></th>
       <th><%= model_class.human_attribute_name(:hosted) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
@@ -34,7 +34,7 @@
   <tbody>
     <% @domains.each do |domain| %>
     <tr>
-      <td> <%= domain.description %> </td>
+      <td> <%= domain.url %> </td>
       <td> <%= domain.data_rights %> </td>
       <td> <%= domain.hosted %> </td>
       <td> <%=l domain.created_at %> </td>
