--- a/app/views/domains/edit.html.erb
+++ b/app/views/domains/edit.html.erb
@@ -1,4 +1,7 @@
 <%- model_class = @domain.class -%>
 <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
                                  :default => "Edit #{model_class.model_name.human}") %></h1>
-<%= render :partial => 'form' %>
+
+<%= form_for @domain, :as => :domain, :url => domain_path(:id => @domain), :html => { :class => 'form-horizontal' } do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<% end %>
