--- a/app/views/domains/new.html.erb
+++ b/app/views/domains/new.html.erb
@@ -2,4 +2,6 @@
 
 <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
                                :default => "New #{model_class.model_name.human}") %></h1>
-<%= render :partial => 'form' %>
+<%= form_for @domain, :html => { :class => 'form-horizontal' } do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<% end %>
