refs #18579 - added club selector

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,6 +23,11 @@
             <li><%= link_to t('menu.partners'), admin_partners_path  %></li>
             <li><%= link_to t('menu.logout'), destroy_user_session_path, :method => :delete  %></li>
             <li>TODO: search memebr</li>
+            <li>
+              <%= select_tag "change_partner",
+                options_for_select(Club.all.collect{ |u| [u.name, members_path(u.partner.prefix, u.name) ] }), 
+                :onchange => "window.open(this.options[this.selectedIndex].value, '_top')" %>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       <% end %>           
