--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,1 +1,6 @@
-asho
+<h1>Search</h1>
+
+<%= form_tag('#', :method => 'get', :html => { :class => 'well form-inline' }) do %>
+  Fields
+  <p><%= submit_tag 'Search', :class => "btn btn-inverse" -%></p>
+<% end %>
