--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
 
       <a class="brand" href="<%= root_path %>">SacPlatform</a>
 
-      <% if current_user %>
+      <% if current_agent %>
         <div class="container nav-collapse">
           <ul class="nav">
             <% unless @current_partner.nil? %>
@@ -19,9 +19,9 @@
                 <li><%= image_tag @current_partner.logo.url %></li>
               <% end %>
             <% end %>
-            <li><%= link_to t('menu.users'), admin_users_path  %></li>
+            <li><%= link_to t('menu.agents'), admin_agents_path  %></li>
             <li><%= link_to t('menu.partners'), admin_partners_path  %></li>
-            <li><%= link_to t('menu.logout'), destroy_user_session_path, :method => :delete  %></li>
+            <li><%= link_to t('menu.logout'), destroy_agent_session_path, :method => :delete  %></li>
             <li>TODO: search memebr</li>
             <li>
               <%= select_tag "change_partner",
