--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,7 @@
-<% if current_user %>
+<% if current_agent %>
   <div class="span3">
     <div class="well sidebar-nav">
-      Hello <%= current_user.email %> <br>
+      Hello <%= current_agent.email %> <br>
       <h3>Sidebar</h3>
       <% if @current_partner %>
         <ul class="nav nav-list">
