--- a/app/views/admin/agents/_form.html.erb
+++ b/app/views/admin/agents/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [ :admin, @user ], :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for [ :admin, @agent ], :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :email, :class => 'control-label' %>
     <div class="controls">
@@ -27,6 +27,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t(:cancel),
-                admin_users_path, :class => 'btn' %>
+                admin_agents_path, :class => 'btn' %>
   </div>
 <% end %>
