--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = User.new.class -%>
+<%- model_class = Agent.new.class -%>
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 <table class="table table-striped">
   <thead>
@@ -12,22 +12,22 @@
     </tr>
   </thead>
   <tbody>
-    <% @users.each do |user| %>
+    <% @agents.each do |agent| %>
       <tr>
-        <td><%= link_to user.id, admin_user_path(user) %></td>
-        <td><%= user.email %></td>
-        <td><%= user.username %></td>
-        <td><%= I18n.l user.locked_at, :format => :long if !user.locked_at.nil? %></td>
-        <td><%= I18n.l user.created_at, :format => :long %></td>
+        <td><%= link_to agent.id, admin_agent_path(agent) %></td>
+        <td><%= agent.email %></td>
+        <td><%= agent.username %></td>
+        <td><%= I18n.l agent.locked_at, :format => :long if !agent.locked_at.nil? %></td>
+        <td><%= I18n.l agent.created_at, :format => :long %></td>
         <td>
-          <%= link_to t(:edit), edit_admin_user_path(user), :class => 'btn btn-mini' %>
-          <%= link_to t(:destroy), admin_user_path(user), :method => :delete,
+          <%= link_to t(:edit), edit_admin_agent_path(agent), :class => 'btn btn-mini' %>
+          <%= link_to t(:destroy), admin_agent_path(agent), :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
-          <% if user.locked_at.nil? %>
-            <%= link_to t(:lock), admin_user_lock_path(user.id), :class => 'btn btn-mini btn-danger' %>
+          <% if agent.locked_at.nil? %>
+            <%= link_to t(:lock), admin_agent_lock_path(agent.id), :class => 'btn btn-mini btn-danger' %>
           <% else %>
-            <%= link_to t(:unlock), admin_user_unlock_path(user.id), :class => 'btn btn-mini btn-primary' %>     
+            <%= link_to t(:unlock), admin_agent_unlock_path(agent.id), :class => 'btn btn-mini btn-primary' %>     
           <% end %>
         </td>
       </tr>
@@ -35,8 +35,8 @@
   </tbody>
 </table>
 
-<%= will_paginate @users %>
+<%= will_paginate @agents %>
 
 <%= link_to t(:new),
-            new_admin_user_path,
+            new_admin_agent_path,
             :class => 'btn btn-primary' %>
