--- a/app/views/domains/show.html.erb
+++ b/app/views/domains/show.html.erb
@@ -21,7 +21,7 @@
 
 <p>
   <strong><%= model_class.human_attribute_name(:club_id) %>:</strong><br>
-  <%= @domain.club_id %>
+  <%= @domain.club.name %>
 </p>
 
 <div class="form-actions">
